--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,14 +2,21 @@
   "docsets_to_publish": [
     {
       "docset_name": "learn-cert-ppe-test",
-      "build_source_folder": ".",
+      "build_source_folder": "learn-cert-ppe-test",
       "build_output_subfolder": "learn-cert-ppe-test",
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
-        "Conceptual": "Content"
+        "Conceptual": "Content",
+        "Certification": "Content",
+        "CertificationHome": "Content",
+        "ContentBrowser": "Content",
+        "Course": "Content",
+        "Examination": "Content",
+        "ExamPricing": "Toc",
+        "Role": "Content"
       },
       "build_entry_point": "docs",
       "template_folder": "_themes"
